<resources>
    <string name="app_name">Device Scan</string>
    <string name="scan_devices">Scan Devices</string>
    <string name="back">Back</string>
    <string name="device_address">Device Address:</string>
    <string name="device_name">Device Name:</string>
    <string name="mac_address">MAC Address:</string>
    <string name="ip_address">IP Address:</string>
    <string name="imei">IMEI:</string>
    <string name="model_nhardware">Model: \nHardware:</string>
    <string name="os">OS:</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_off">Turn Off</string>
    <string name="discoverable">Discoverable</string>
    <string name="get_paired_device">Get Paired Device</string>
    <string name="scan_bluetooth">Scan Bluetooth</string>
    <string name="search">Search...</string>
    <string name="uid">uid : </string>
    <string name="alias">alias : </string>
    <string name="stop_discovery">Stop Discovery</string>
    <string name="start_discovery">Start Discovery</string>
    <string name="search_device">Search Device</string>
    <string name="scan">Scan</string>
    <string name="stop">Stop</string>
    <string name="ssdp">SSDP</string>
    <string name="mdns">MDNS</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi2p2">WIFI2P2</string>
    <string name="device_details">Device details</string>
</resources>