<!-- activity_device_detail.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <!-- Additional device information -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Title TextView -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_details"
            android:textSize="24sp"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/deviceNameTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/device_name"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/deviceAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="start"
            android:text="@string/device_address"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/osInfoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:text="@string/os" />

        <TextView
            android:id="@+id/modelHardwareTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:text="@string/model_nhardware" />

        <TextView
            android:id="@+id/imeiTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:text="@string/imei" />

        <TextView
            android:id="@+id/ipAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:text="@string/ip_address" />

        <TextView
            android:id="@+id/uid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:text="@string/uid" />

        <TextView
            android:id="@+id/alias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:text="@string/alias" />

        <TextView
            android:id="@+id/macAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="start"
            android:text="@string/mac_address" />


        <Button
            android:id="@+id/backButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onBackButtonClick"
            android:text="Back" />
    </LinearLayout>

</LinearLayout>
